# movement_pkg

./: CMakeLists.txt  README.md  package.xml
challenge_ws/src/movement_pkg/: CMakeLists.txt  package.xml
challenge_ws/src/movement_pkg/include/movement_pkg/: cb_data_manager.h  walking_controller.h
challenge_ws/src/movement_pkg/src/nodes/: walk_to_target_action.h
config/: bt_tree.dot  soccer_motion_controller.xml
include/: MotionController.h
include/movement_pkg/: MotionController.h  blackboard.h  cb_data_manager.h  fov_calculation.h  motion_controller_node.h  repeat_node.h  tree_builder.h  utils.h  walking_controller.h
include/movement_pkg/nodes/: ball_close_condition.h  ball_detected_Viola_Jones_condition.h  ball_detected_condition.h  ball_direction_condition.h  ball_in_center_condition.h  can_move_condition.h  center_ball_Viola_Jones_action.h  center_ball_YOLOPID.h  center_ball_YOLO_CPU_action.h  center_ball_YOLO_Jetson_action.h  center_ball_YOLO_PID_action.h  center_ball_action.h  center_goal_YOLO_PID_action.h  center_goal_slow_action.h  choose_kick_foot_condition.h  fov_walking_action.h  get_up_backwards_action.h  get_up_combined_action.h  get_up_forward_action.h  goals_detected_condition.h  init_pose_condition.h  kick_action.h  kick_side_decider_condition.h  lateral_move_condition.h  left_kick_action.h  left_long_kick_action.h  left_search_goal_action.h  long_kick_action.h  lower_head_action.h  manager_done_condition.h  manager_running_condition.h  move_head_action.h  online_walk_to_target_action.h  penalty_kick_action.h  quadrant_condition.h  ref_entry_condition.h  referee_state_condition.h  repeat_n_times.h  right_kick_action.h  right_long_kick_action.h  (+19 more)
launch/: movement.launch  soccer.launch  tree_visualization.launch
src/: .tree_builder.cpp.swp  MotionController.cpp  blackboard.cpp  cb_data_manager.cpp  cleanup_bt_image.sh  fov_calculation.cpp  motion_controller_node.cpp  movement_node.cpp  publish_bt_image.cpp  repeat_node.cpp  tree_builder.cpp  tree_visualization.cpp  utils.cpp  view_bt_tree.sh  walking_controller.cpp
src/nodes/: ball_close_condition.cpp  ball_detected_Viola_Jones_condition.cpp  ball_detected_condition.cpp  ball_direction_condition.cpp  ball_in_center_condition.cpp  can_move_condition.cpp  center_ball_Viola_Jones_action.cpp  center_ball_YOLOPID.cpp  center_ball_YOLO_CPU_action.cpp  center_ball_YOLO_Jetson_action.cpp  center_ball_YOLO_PID_action.cpp  center_ball_action.cpp  center_goal_YOLO_PID_action.cpp  center_goal_slow_action.cpp  choose_kick_foot_condition.cpp  fov_walking_action.cpp  get_up_backwards_action.cpp  get_up_combined_action.cpp  get_up_forward_action.cpp  goals_detected_condition.cpp  init_pose_condition.cpp  kick_action.cpp  kick_side_decider_condition.cpp  lateral_move_condtion.cpp  left_kick_action.cpp  left_long_kick_action.cpp  left_search_goal_action.cpp  long_kick_action.cpp  lower_head_action.cpp  manager_done_condition.cpp  manager_running_condition.cpp  move_head_action.cpp  online_walk_to_target_action.cpp  penalty_kick_action.cpp  quadrant_condition.cpp  ref_entry_condition.cpp  referee_state_condition.cpp  repeat_n_times.cpp  right_kick_action.cpp  right_long_kick_action.cpp  (+19 more)
